03-applications/01-config-gitops-apps/frontend-deploy/base/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pipelines-vote-ui
  name: pipelines-vote-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pipelines-vote-ui
  template:
    metadata:
      labels:
        app: pipelines-vote-ui
    spec:
      containers:
        - image: quay.io/fanyaegb/pipeline-vote-ui:latest
          imagePullPolicy: Always
          name: pipeline-vote-ui
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 9090
              protocol: TCP          
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
