03-applications/01-config-gitops-apps/frontend-deploy/base/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pipeline-vote-ui
  name: pipeline-vote-ui
spec:
  type: NodePort
  ports:
    - name: 8080-tcp
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: pipeline-vote-ui
