03-applications/01-config-gitops-apps/frontend-deploy/base/03-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: pipelines-vote-ui
  name: pipelines-vote-ui
spec:
  host: vote-here.apps.dd-aro.eastus.aroapp.io
  # port:
  #   targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: pipelines-vote-ui
    weight: 100

# ---
# apiVersion: route.openshift.io/v1
# kind: Route
# metadata:
#   labels:
#     app: pipelines-vote-ui
#   name: pipelines-vote-ui
# spec:
#   port:
#     targetPort: 8080-tcp
#   to:
#     kind: Service
#     name: pipelines-vote-ui
#     weight: 100
